# coingecko_py

./: .coveragerc  .env  .gitignore  CHANGELOG.md  FUTURE_WORK.md  LICENSE  README.md  RELEASES.md  pyproject.toml  test_runner.py
.github/workflows/: ci.yml
client/: README.md
client/docs/: CoingeckoApi.md  SWAGGERCLIENTNAMEApi.md
client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
client/swagger_client/api/: __init__.py  coingecko_api.py  swagger_client_name_api.py
client/test/: test_coingecko_api.py  test_swagger_client_name_api.py
coingecko_py/: __init__.py  coingecko_py.py
coingecko_py/scripts/: github.py  swagger.py
coingecko_py/swagger_generated/swagger_client/: __init__.py  api_client.py
coingecko_py/swagger_generated/swagger_client/api/: __init__.py  coingecko_api.py
coingecko_py/utils/: api_meta.py  constants.py  utils.py
data/: test_api_calls.json
docs/: API.md  CHANGELOG.md  FUTURE_WORK.md  RELEASES.md
py_coingecko/: __init__.py  py_coingecko.py
py_coingecko/scripts/: github.py  swagger.py
py_coingecko/swagger_data/: swagger.json  test_api_calls.json
py_coingecko/swagger_generated/swagger_client/: __init__.py  api_client.py
py_coingecko/swagger_generated/swagger_client/api/: __init__.py  coingecko_api.py
py_coingecko/utils/: api_meta.py  constants.py  utils.py
pycoingecko_extra/: __init__.py  pycoingecko_extra.py  pycoingecko_v2.py  utils.py
scripts/: github.py  swagger.py  utils.py
src/: pycoingecko_extra.py
src/py_coingecko/: __init__.py  api_meta.py  py_coingecko.py
src/py_coingecko/scripts/: github.py  swagger.py
src/py_coingecko/swagger_generated/: setup.py
src/py_coingecko/swagger_generated/swagger_client/: __init__.py  api_client.py
src/py_coingecko/swagger_generated/swagger_client/api/: __init__.py  coingecko_api.py
src/py_coingecko/utils/: api_meta.py  constants.py  utils.py
src/scripts/: github.py  swagger.py
src/swagger_generated/: README.md  setup.py
swagger_client/: setup.py
swagger_client/swagger_client/: configuration.py  rest.py
swagger_client/swagger_client/api/: coingecko_api.py
swagger_client/swagger_client/models/: __init__.py
swagger_client/test/: test_coingecko_api.py
swagger_data/: swagger_processed_diff.txt  url_to_method.json
swagger_specs/: swagger_processed.json
tests/: test_api.py  test_api_client.py  test_api_extra.py  test_api_queued.py  test_api_queued2.py  test_swagger.py  test_utils.py
tests/data/: constants.py  test_data_paged.json
tests/scripts/: get_test_data.py  runner.py
