[tool.poetry]
name = "py_coingecko"
version = "1.0.0"
description = "A python API client for the coingecko API."
authors = ["Bryce Morrow <brycemorrow4564@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brycemorrow4564/py_coingecko"
repository = "https://github.com/brycemorrow4564/py_coingecko"
packages = [
    { include = "py_coingecko", from = "./src" }, 
    { include = "tests" }, 
    { include = "scripts", from = "./src" }, 
    { include = "swagger_client", from = "./src/swagger_generated" }
]
exclude = ["tests", "scripts"] # TODO: check bundle after building to see if scripts included 

[tool.poetry.scripts]                                                           
test                        = "tests.scripts.runner:run_tests"  
get_data                    = "tests.scripts.get_test_data:get_data"
generate_client             = "src.scripts.swagger:generate_client" 
generate_test_data          = "src.scripts.swagger:generate_test_data" 
generate_test_data_template = "src.scripts.swagger:generate_test_data_template"
get_cov                     = "src.scripts.github:get_cov_percent"
get_cov_color               = "src.scripts.github:get_cov_color"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
swagger_client = { path = "./src/swagger_generated", develop = true } 

[tool.poetry.dev-dependencies]
responses = "^0.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = {version = "^21.12b0", allow-prereleases = true }
toml = "^0.10.2"
deepdiff = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
