[tool.poetry]
name = "py_coingecko"
version = "1.0.0"
description = "A python API client for the coingecko API."
authors = ["Bryce Morrow <brycemorrow4564@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brycemorrow4564/py_coingecko"
repository = "https://github.com/brycemorrow4564/py_coingecko"
packages = [
    { include = "py_coingecko", from = "./src" }
]

[tool.poetry.scripts]                              
# running unit + integration tests                              
test                        = "tests.scripts.runner:run_tests"  
# used for generating client / metadata 
get_data                    = "tests.scripts.get_test_data:get_data"
generate_client             = "src.scripts.swagger:generate_client" 
generate_test_data          = "src.scripts.swagger:generate_test_data" 
generate_test_data_template = "src.scripts.swagger:generate_test_data_template"
# used by github actions 
get_cov                     = "src.scripts.github:get_cov_percent"
get_cov_color               = "src.scripts.github:get_cov_color"
get_api_version             = "src.scripts.github:get_api_version"
is_client_updated           = "src.scripts.swagger:github_specs_equal"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
# dependencies for swagger-codegen generated code 
certifi = "^2017.4.17" # changed 
six = "^1.10"
python_dateutil = "^2.5.3"
urllib3 = "^1.25.10" # changed 


[tool.poetry.dev-dependencies]
responses = "^0.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = {version = "^21.12b0", allow-prereleases = true }
toml = "^0.10.2"
deepdiff = "^5.7.0"

[build-system]
requires = [
    "setuptools", 
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
